--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -33,7 +33,7 @@ $ls-2: 0.03rem;
 $pd-1: 25px;
 $pd-2: 225px;
 $pd-3: 13px;
-$pd-4: 44px;
+$pd-4: 25px;
 $pd-5: 100px;
 $pd-6: 8px;
 $pd-7: 60px;
@@ -48,7 +48,7 @@ $mg-b: 0.5em;
 //border
 $bd-1: 2px;
 $bd-2: 8px;
-
+$bd-3: 30px;
 
 //break points
 $breakpoints: (
