--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,38 +1,39 @@
-header{
-   
-    .nav-item{
-        .nav-link{
-            @include styleText ($color-dark-1, $fs-1, $fw-1);
-            
-        }
-    }
-    .nav-link{
-        a {
-            @include styleText ($color-dark-1, $fs-1, $fw-1); 
-           
-        }
-    }
-    .collapse{
+header {
+    
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 1.5rem;
 
-        .btnphone{
+        @include styleText($color-dark-1, $fs-1, $fw-1);
+    }
+
+    .nav-link {
+        a {
+            padding-left: 20px;
+            @include styleText($color-dark-1, $fs-1, $fw-1);
+        }
+    }
+
+    .collapse {
+        padding-left: 100px;
+
+        .btnphone {
+           
             a {
-                @include styleText ($color-white-1, $fs-1, $fw-1); 
-                background-color: $bg-color;
-                box-shadow: 0 0 0 1em #b61984 ;
-                border-radius: 30px;
-                :hover{
-                    
+                @include styleText($color-white-1, $fs-1, $fw-2);
+
+                &:hover {
+                    text-decoration: none;
+
                 }
             }
+
         }
-        
-        .btnmxh{
-            padding-left: 30px;
+
+        .btnmxh {
             font-size: $fs-3;
+            padding-left: 20px;
             @extend .nav-link;
         }
-        :hover{
-            text-decoration: none;
-        }
+
     }
 }
