--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,9 @@
 //layout
 @import "./Layout/header";
 @import "./Layout/carousel";
-
+@import "./Layout/people";
+@import "./Layout/formpeople";
+@import "./Layout/footer";
 // pages
 
 //theme
