--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,29 +1,68 @@
 header {
-    
+    .fixed-top {
+        position: fixed;
+        width: 100%;
+        height: 100px;
+        top: 0;
+        left: 50%;
+        z-index: 100;
+        transform: translateX(-50%);
+        border-bottom: 2px solid rgba(231, 231, 231, 0.18);
+        background-color: transparent;
+      }
+
+      .nav-fixed {
+        padding: 0px;
+        background-color: white;
+        height: 80px;
+        border-bottom: none;
+        box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
+        z-index: 100;
+      }
+      
+    .active::after {
+        content: "";
+        width: 9px;
+        height: 9px;
+        background-color: #b61984;
+        display: block;
+        border-radius: 50%;
+        transform: translateX(23px) translateY(10px);
+    }
+
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 1.5rem;
 
         @include styleText($color-dark-1, $fs-1, $fw-1);
     }
 
+    .navbar-nav a:hover {
+        text-decoration: none;
+        color: #b61984 !important;
+
+    }
+
     .nav-link {
         a {
+
             padding-left: 20px;
             @include styleText($color-dark-1, $fs-1, $fw-1);
+
         }
+
     }
 
     .collapse {
-        padding-left: 100px;
+        padding-left: 130px;
 
         .btnphone {
-           
+
             a {
                 @include styleText($color-white-1, $fs-1, $fw-2);
 
                 &:hover {
                     text-decoration: none;
-
+                    color: #b61984;
                 }
             }
 
@@ -33,7 +72,14 @@ header {
             font-size: $fs-3;
             padding-left: 20px;
             @extend .nav-link;
+
+            a:hover {
+                text-decoration: none;
+                color: #b61984;
+            }
         }
 
     }
+
+    
 }
