--- a/sass/Layout/_people.scss
+++ b/sass/Layout/_people.scss
@@ -1,8 +1,9 @@
 .people {
-    z-index: 2;
+
     position: relative;
     background-color: #dcd1f3;
 
+    // padding-top: 130px;
     .row {
         border-radius: 10px;
         text-align: center;
@@ -10,23 +11,49 @@
         width: 100%;
         padding-top: 2em;
         padding-bottom: 2em;
-        
+
         .card {
             border-radius: 10px;
-            z-index: 5;
-            
+           
+
+            .card-teacher {
+                text-align: center;
+                padding: 40px 5px;
+            }
+
+            .card-title {
+                font-size: .75rem;
+                margin-bottom: 0.7em;
+                color: #b61984;
+            }
+
+            .card-text {
+                font-size: 1.8rem;
+                font-weight: 700;
+                color: #181818;
+                padding: 2px 0;
+            }
+
+            .card-text-2 {
+                font-size: 13px;
+                font-weight: 500;
+                color: #181818;
+                padding: 6px 0;
+            }
+
             img {
                 border-radius: 10px;
             }
 
-            &:hover{
+            &:hover {
                 box-shadow: 0 30px 30px -10px rgb(0 0 0 / 20%);
             }
 
         }
 
-        
+
     }
+
     .peopleborder {
         bottom: 0;
         position: absolute;
@@ -37,7 +64,7 @@
         img {
             max-width: 100%;
             height: auto;
-            
+
         }
     }
 
