--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -13,9 +13,10 @@ $color-dark-3:#212121;
 
 //bg-color
 $bg-color: #b61984 ;
+$bg-color-white: #f5f9fe ;
 //font size
 $fs-1: 16px;
-$fs-2: 1.1rem;
+$fs-2: 1.4rem;
 $fs-3: 24px;
 $fs-4: 0.94rem;
 
@@ -32,8 +33,8 @@ $ls-2: 0.03rem;
 //Padding
 $pd-1: 25px;
 $pd-2: 225px;
-$pd-3: 13px;
-$pd-4: 25px;
+$pd-3: 20px;
+$pd-4: 40px;
 $pd-5: 100px;
 $pd-6: 8px;
 $pd-7: 60px;
