--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -1,10 +1,96 @@
-footer{
+footer {
     height: auto;
     background-image: url(../img/footer_background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    
+
+    .row {
+        padding: 180px 0 200px;
+
+        .title {
+            line-height: 1.2;
+
+            h2 {
+                font-size: 1.6rem;
+                font-weight: 700;
+                color: #fff;
+                padding: 24px 0;
+            }
+        }
+
+        .footer-address {
+            div i {
+                padding-right: 8px;
+                color: #fff;
+            }
+
+            span {
+                color: #fff;
+            }
+        }
+
+        .icon-mxh {
+            padding: 20px 0;
+            margin-right: 18px;
+
+            a {
+                font-size: 1.5rem;
+                font-weight: 200;
+                color: #fff;
+                text-decoration: none;
+                padding-top: 5px;
+                margin-right: 13px;
+                transition: all 0.5s;
+                &:hover{
+                    color: #181818;
+                }
+            }
+           
+        }
+
+        .footer-menu,
+        .footer-About {
+            a {
+                display: block;
+                font-size: 16px;
+                font-weight: 400;
+                color: #fff;
+                padding: 10px 0;
+                border-bottom: 1px solid #0000001a;
+                text-decoration: none;
+                &:hover {
+                    opacity: 0.6;
+                }
+            }
+        }
+
+        .new {
+
+            div {
+                padding: 30px 0 20px;
+            }
+
+            input {
+                background-color: #b61984;
+                padding: 20.5px 40px;
+                border: 1px solid rgba(255,255,255,.1);
+                border-radius: 20px;
+                
+                text-align: center;
+                
+            }
+
+            .btn-sub {
+                
+                padding: 20.5px 92px;
+                border: 1px solid white;
+                border-radius: 20px;
+                transition: all 300ms ease;
+                text-align: center;
+            }
+
+        }
+
+    }
 }
-
-
