--- a/sass/Layout/_formpeople.scss
+++ b/sass/Layout/_formpeople.scss
@@ -1,8 +1,8 @@
 .formpeople {
-    
+    padding-top: 150px;
     position: relative;
 
-    
+
     .row {
         width: 100%
     }
@@ -21,7 +21,7 @@
     }
 
     .formtext {
-       
+
         .formthunhat {
             display: flex;
             justify-content: center;
@@ -35,7 +35,7 @@
 
                 .fa-solid {
                     position: absolute;
-                    top: 7.3rem;
+                    top: 11.2rem;
                     left: 3em;
 
                 }
@@ -68,17 +68,32 @@
         border-radius: 10px;
         box-shadow: 0 30px 30px -10px rgb(0 0 0 / 20%);
         padding: 20px;
-       
+        background: $color-white-3;
+
+        
+        h2 {
+            font-size: 33px;
+            font-weight: 700;
+            color: #181818;
+            padding: 30px 0;
+            
+        }
 
         .over {
             margin-bottom: 25px;
         }
 
+
+
+
+
         .form-group {
             width: 90%;
-
+            color: #b61984;
+            padding-right: 6px;
             .form-control {
                 padding: 0.5rem 2.2rem;
+                border-radius: 20px;
             }
 
             textarea {
@@ -110,7 +125,7 @@
             .input-group-messages {
 
                 position: absolute;
-                top: 16.3em;
+                top: 21.8em;
                 left: 3.2em;
 
             }
