--- a/sass/Layout/_carousel.scss
+++ b/sass/Layout/_carousel.scss
@@ -1,6 +1,6 @@
 .bannerlanguege {
     width: 100%;
-    
+    padding: 50px 0 40px;
     position: relative;
 
     .container {
@@ -18,7 +18,7 @@
 
     .banner_left {
         width: 55%;
-        padding: 16% 0 5% 0;
+        padding: 18% 0 15% 0;
         .title {
 
             h2 {
@@ -32,14 +32,11 @@
                 font-size: 4.3rem;
             }
 
-            
-
+    
         }
 
     }
-    .banner_right{
-        padding: 3% 0 15% 0;
-    }
+ 
     
 
 
