--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -55,7 +55,7 @@ header {
     }
 
     .collapse {
-        padding-left: 130px;
+        
 
         .btnphone {
 
@@ -119,6 +119,8 @@ header {
 
         .nav-link {
             text-align: center;
+            background-color: white;
+            width: 100%;
         }
 
         header .port img {
