--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -69,21 +69,26 @@ footer {
 
             div {
                 padding: 30px 0 20px;
+                
             }
 
             input {
                 background-color: #b61984;
-                padding: 20.5px 40px;
-                border: 1px solid rgba(255,255,255,.1);
+                padding: 11px 42px;
+                border: 1px solid rgba(255, 255, 255, 0.1);
                 border-radius: 20px;
-                
+                color: white;
                 text-align: center;
                 
+                
             }
-
+            .Email::placeholder { 
+                color: white;
+                
+            }
             .btn-sub {
                 
-                padding: 20.5px 92px;
+                padding: 11px 92px;
                 border: 1px solid white;
                 border-radius: 20px;
                 transition: all 300ms ease;
