--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,23 +1,19 @@
 header {
     .fixed-top {
         position: fixed;
-        width: 100%;
-        height: 100px;
+        width: 100%;    
         top: 0;
         left: 50%;
-        z-index: 100;
-        transform: translateX(-50%);
-        border-bottom: 2px solid rgba(231, 231, 231, 0.18);
-        background-color: transparent;
+        padding: 0;
     }
 
     .nav-fixed {
+       
+        transition: all 0.7s;
         padding: 0px;
         background-color: white;
-        height: 80px;
         border-bottom: none;
         box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
-        z-index: 100;
     }
 
     .active::after {
